[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Furneture/Door/Door_Sprite.png" type="Texture" id=1]
[ext_resource path="res://Assets/Furneture/Door/Door_Scipt.gd" type="Script" id=2]
[ext_resource path="res://Assets/Furneture/Door/Door_UI.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/FX/OpeningDoor.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 224 )

[node name="Door" type="Area2D"]
scale = Vector2( 0.85, 0.85 )
script = ExtResource( 2 )

[node name="DoorSprite" type="Sprite" parent="."]
scale = Vector2( 15, 15 )
texture = ExtResource( 1 )

[node name="DoorCollison" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Door_UI" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -280 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "FX"
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
